catkin_ws/logs/add_pallet/build.make.229.log.stderr
  File "/home/loren.lyttle/tests/catkin_ws/src/add_pallet/cfg/dynamic_params.cfg", line 18
    arg name = "test_file" default = "$(find add_pallet)/cfg/dynamic_params.yaml"
           ^
SyntaxError: invalid syntax
make[2]: *** [/home/loren.lyttle/tests/catkin_ws/devel/.private/add_pallet/include/add_pallet/dynamic_paramsConfig.h] Error 1
make[1]: *** [CMakeFiles/add_pallet_gencfg.dir/all] Error 2
make: *** [all] Error 2
